<resources>
    <string name="app_name">FinalPro</string>
    <string name="txtnombre">Nombre</string>
    <string name="correo">Correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="btnregistro">Ir a registro</string>
    <string name="btningresar">Ingresar</string>
    <string name="bienvenido">Bienvenido!!</string>
    <string name="txtapellidos">Apellidos</string>
    <string name="txttelefono">Telefono</string>
    <string name="txtemail">Correo electrónico</string>
    <string name="txtdireccion">Dirección</string>
    <string name="fecha">Fecha nacimiento</string>
    <string name="Genero">Genero</string>
    <string name="txtmasculino">Masculino</string>
    <string name="txtfemenino">Femenino</string>
    <string name="txtcargarfoto">Cargar foto</string>
    <string name="btngaleria">Galería</string>
    <string name="btntomarfoto">Tomar foto</string>
    <string name="btnregistrar">Registrar</string>
    <string name="registro">Registro</string>
  <string name="welcome">Bienvenid@</string>
    <string name="sign_in">Ingresar</string>
    <string name="sign_up">Registrarse</string>
  <string name="sex">Sexo</string>
    <string name="city">Ciudad</string>
  <string name="photo">Foto</string>
  <string name="update_profile">Actualizar perfil</string>
  <string name="get_out">Salir</string>

</resources>
