<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:padding="16dp">

  <TextView
    android:id="@+id/login_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/welcome"
    android:textSize="20dp"/>

  <EditText
    android:id="@+id/txt_correo"
    android:hint="@string/correo"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_gravity="center"
    android:inputType="textEmailAddress"/>

  <EditText
    android:id="@+id/txt_password"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_gravity="center"
    android:hint="@string/contrasena"
    android:inputType="textPassword"/>

  <RelativeLayout
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="20dp">
    <Button
      android:id="@+id/btn_ingresar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:text="@string/sign_in"
      android:textStyle="bold"/>

    <Button
      android:id="@+id/btn_registro"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentRight="true"
      android:text="@string/sign_up"
      android:textStyle="bold"/>

  </RelativeLayout>

</LinearLayout>
