<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:padding="16dp">
  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true">
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">
      <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro"
        android:layout_gravity="center"
        android:textSize="26dp"
        android:textStyle="bold" />
      <EditText
        android:id="@+id/nombres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtnombre"
        android:inputType="textCapWords|textNoSuggestions"
        android:layout_marginTop="20dp" />
      <EditText
        android:id="@+id/apellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtapellidos"
        android:inputType="textCapWords|textNoSuggestions"
        android:layout_marginTop="10dp" />
      <TextView
        android:id="@+id/sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sex"
        android:layout_marginTop="15dp"
        android:textSize="18dp"/>
      <RadioGroup
        android:id="@+id/sexGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <RadioButton
          android:id="@+id/femenino"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/txtmasculino"/>
        <RadioButton
          android:id="@+id/masculino"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/txtfemenino"/>
      </RadioGroup>
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">
        <EditText
          android:id="@+id/txtfecha"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:hint="dd/mm/aa"
          android:clickable="false"
          android:cursorVisible="false"
          android:focusable="false"
          android:focusableInTouchMode="false"
          android:inputType="text"
          android:layout_weight="2"/>
        <Button
          android:id="@+id/btnfecha"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="@string/fecha"
          android:layout_weight="2"
          android:textStyle="bold"/>
      </LinearLayout>
      <EditText
        android:id="@+id/telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txttelefono"
        android:inputType="phone"
        android:layout_marginTop="15dp"/>
      <EditText
        android:id="@+id/direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtdireccion"
        android:inputType="text|textNoSuggestions"
        android:layout_marginTop="15dp"/>
      <EditText
        android:id="@+id/txtemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtemail"
        android:inputType="textEmailAddress"
        android:layout_marginTop="15dp"/>
      <EditText
        android:id="@+id/contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"/>

      <Button
        android:id="@+id/btnregistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="267dp"
        android:text="@string/btnregistrar"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />



      <!--<RadioGroup-->
        <!--android:id="@+id/radio"-->
        <!--android:layout_width="173dp"-->
        <!--android:layout_height="70dp"-->
        <!--android:layout_marginTop="42dp"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/contraseña">-->

        <!--<RadioButton-->
          <!--android:id="@+id/femenino"-->
          <!--android:layout_width="wrap_content"-->
          <!--android:layout_height="44dp"-->
          <!--android:layout_weight="0.68"-->
          <!--android:text="@string/txtmasculino" />-->

        <!--<RadioButton-->
          <!--android:id="@+id/masculino"-->
          <!--android:layout_width="wrap_content"-->
          <!--android:layout_height="wrap_content"-->
          <!--android:text="RadioButton"-->
          <!--tools:text="@string/txtfemenino" />-->
      <!--</RadioGroup>-->

      <Button
        android:id="@+id/btngaleria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btngaleria"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginRight="141dp"
        android:layout_marginTop="-49dp"
        android:layout_marginLeft="8dp" />


      <Button
        android:id="@+id/btntomarfoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="-94dp"
        android:text="@string/btntomarfoto"
        android:textStyle="bold" />

      <ImageView
        android:id="@+id/imgfoto"
        android:layout_width="107dp"
        android:layout_height="106dp"
        android:layout_marginBottom="133dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp" />


      <!--   <ImageButton
          android:id="@+id/btnimg"
          android:layout_width="45dp"
          android:layout_height="43dp"
          android:layout_marginBottom="0dp"
          android:layout_marginLeft="125dp"
          android:layout_marginRight="8dp"
          android:layout_marginTop="8dp"
          app:layout_constraintBottom_toBottomOf="@+id/btngaleria"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintLeft_toRightOf="@+id/btngaleria"
          app:layout_constraintRight_toRightOf="@+id/textView10"
          app:layout_constraintTop_toTopOf="@+id/btngaleria"
          app:layout_constraintVertical_bias="1.0"
          app:srcCompat="@drawable/ic_menu_camera" />-->


    </LinearLayout>
  </ScrollView>
</LinearLayout>



